k8s/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: watch-history-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: watch-history-service
  template:
    metadata:
      labels:
        app: watch-history-service
    spec:
     # --- C'EST ICI QU'IL DOIT ÊTRE PLACÉ ---
      topologySpreadConstraints:
        - maxSkew: 1
          topologyKey: "kubernetes.io/hostname"
          whenUnsatisfiable: DoNotSchedule
          labelSelector:
            matchLabels:
              app: watch-history-service
      # ---------------------------------------

      imagePullSecrets:
        - name: registry-yeta-registry
      containers:
        - name: watch-history-service
          image: registry.digitalocean.com/yeta-registry/watch-history-service:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
          
          # --- AJOUTS RÉSEAU & RESSOURCES OPTIMISÉS ---
          resources:
            requests:
              cpu: "100m"      # Allocation garantie pour stabiliser le HPA
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"

          livenessProbe:
            httpGet:
              path: /health    # Vérifie l'endpoint de santé Rails
              port: 3000
            initialDelaySeconds: 45  # Temps de boot (Puma + DB + RabbitMQ)
            periodSeconds: 15
            timeoutSeconds: 5
            failureThreshold: 5

          readinessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 20
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 3
          # --------------------------------------------

          command: ["bundle", "exec", "puma", "-C", "config/puma.rb"]
          
          volumeMounts:
            - name: rsa-keys-volume
              mountPath: /app/config/keys
              readOnly: true

      volumes:
        - name: rsa-keys-volume
          secret:
            secretName: watch-history-service-keys
            items:
              # Mapping : Clé du secret -> Chemin relatif dans mountPath
              - key: jwt-public-key
                path: jwt/user-service.pem
              - key: interservice-private-key
                path: interservice/private.pem
