k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rating-service
spec:
  selector:
    app: rating-service
  ports:
    - protocol: TCP
      port: 80          # Le port utilisé par Traefik pour appeler le service
      targetPort: 3000  # Le port réel de ton conteneur Rails (Puma)
  type: ClusterIP
