k8s/base/ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: watch-history-service-route
  namespace: production
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`api.yetaplus.com`) && (PathPrefix(`/api/v1/movies`))
      kind: Rule
      priority: 500 # Priorité haute pour passer devant la gateway globale
      services:
        - name: watch-history-service
          port: 80
      middlewares:
        - name: watch-history-service-headers
        - name: watch-history-service-compress
        - name: watch-history-service-buffering
        - name: api-gateway-ratelimit
        # - name: strip-api-prefix # À garder si Rails répond 404 plus tard
  tls:
    secretName: yeta-api-tls
