k8s/base/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: watch-history-service-egress
spec:
  podSelector:
    matchLabels:
      app: watch-history-service # Assure-toi que ton Job et ton Deployment ont ce label !
  policyTypes:
    - Egress
  egress:
    # DNS
    - to:
        - namespaceSelector: {}
          podSelector:
            matchLabels:
              k8s-app: kube-dns
      ports:
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 53
    # PostgreSQL (VPC DigitalOcean)
    - to:
        - ipBlock:
            cidr: 10.108.0.0/16
      ports:
        - protocol: TCP
          port: 25060
    # RabbitMQ
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: messaging
      ports:
        - protocol: TCP
          port: 5672
    # Communication Inter-Service (Media Service)
    - to:
        - podSelector:
            matchLabels:
              app: media-service
      ports:
        - protocol: TCP
          port: 80
        - protocol: TCP
          port: 3000
